# gameplanner

./: .gitignore  BUGFIX_SUMMARY.md  CMakeLists.txt  CORRECTNESS_VERIFICATION.md  Cargo.toml  IMPLEMENTATION.md  OPTIMIZE_VERIFICATION.md  PROJECT_SUMMARY.md  README-RUST.md  README.md  astro.config.mjs  package-lock.json  package.json  package.json.tmp  tsconfig.json
.github/workflows/: README.md  build-library.yml  build-winui.yml  deploy.yml  rust-build.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/examples/: GamePlannerDemo  Makefile
_codeql_build_dir/lib/: Makefile
docs/: ADDING_GAMES.md  ARCHITECTURE.md  GETTING_STARTED.md  ROADMAP.md  UI_DESIGN.md  UI_MOCKUP.md
examples/: CMakeLists.txt  demo.cpp
gameplanner-cli/: Cargo.toml
gameplanner-cli/src/: main.rs
gameplanner-core/: Cargo.toml
gameplanner-core/src/: build_order.rs  build_order_tests.rs  chess.rs  chess_tests.rs  fory_tests.rs  game.rs  game_tests.rs  lib.rs
gameplanner-ui-windows/: Cargo.toml  DESIGN.md  README.md
gameplanner-ui-windows/src/: main.rs
lib/: CMakeLists.txt
lib/include/: GameFactory.h  GamePlanner.h
lib/src/: GameFactory.cpp
src/components/: ActionBlocks.svelte  App.svelte  BuildOrderCreator.svelte  GameSidebar.svelte  MovesList.svelte  OpeningDisplay.svelte  StarCraft2Simulator.svelte
src/game_logic/: constants.ts  gamelogic.ts  income.ts  index.ts  task.ts  unit.ts
src/layouts/: Layout.astro
src/lib/: buildOrder.ts  chess.ts  constants.ts  event.ts  game.ts  gamelogic.ts  hoi4.ts  index.ts  optimize.ts  starcraft2.ts
src/pages/: index.astro
winui/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  README.md  pch.h
