[workspace]
members = [
    "gameplanner-core",
    "gameplanner-cli",
    "gameplanner-ui-windows",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Napolitain"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows UI
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
