[workspace]
members = [
    "gameplanner-core",
    "gameplanner-cli",
]
default-members = ["gameplanner-core", "gameplanner-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Napolitain"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
