[workspace]
members = [
    "gameplanner-core",
    "gameplanner-cli",
    "gameplanner-ui-windows",
]
default-members = ["gameplanner-core", "gameplanner-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Napolitain"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
fory = "0.13.0"
fory-core = "0.13.0"
