[package]
name = "gameplanner-ui-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gameplanner-ui"
path = "src/main.rs"

[dependencies]
gameplanner-core = { path = "../gameplanner-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
